--- a/src/sass/layout/_dashboard.scss
+++ b/src/sass/layout/_dashboard.scss
@@ -143,6 +143,12 @@
     &__item:hover &__icon {
         fill: #fff;
     }
+
+    &__divider {
+        border: 0;
+        height: 1px;
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    }
 }
 
 .navbar {
