--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,14 @@ html {
 html {
   font-family: 'Sarabun', sans-serif; }
 
+@keyframes popup {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5); }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); } }
+
 .popup {
   height: 100vh;
   width: 100%;
@@ -22,28 +30,33 @@ html {
   left: 0;
   background-color: rgba(0, 0, 0, 0.35);
   z-index: 3500;
-  opacity: 0;
-  visibility: hidden;
+  opacity: 1;
+  visibility: visible;
   transition: all .3s; }
-  .popup:target {
-    opacity: 1;
-    visibility: visible; }
-  .popup:target .popup__content {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1); }
+  .popup__header {
+    display: flex; }
+  .popup__close {
+    color: #333;
+    position: absolute;
+    top: 0.8rem;
+    right: 2rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    line-height: 1;
+    cursor: pointer; }
   .popup__content {
     width: 25%;
     position: absolute;
     top: 25%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(0.5);
+    transform: translate(-50%, -50%) scale(1);
     background-color: #fff;
     border-radius: 3px;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     display: table;
     overflow: hidden;
-    opacity: 0;
-    transition: all .4s; }
+    animation: popup .4s; }
   .popup__title {
     font-size: 1.7rem;
     color: #88979d;
