--- a/src/sass/components/_popup.scss
+++ b/src/sass/components/_popup.scss
@@ -1,3 +1,15 @@
+@keyframes popup {
+    0% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.5);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+}
+
 .popup {
     height: 100vh;
     width: 100%;
@@ -6,18 +18,24 @@
     left: 0;
     background-color: rgba($color-black, .35);
     z-index: 3500;
-    opacity: 0;
-    visibility: hidden;
+    opacity: 1;
+    visibility: visible;
     transition: all .3s;
 
-    &:target {
-        opacity: 1;
-        visibility: visible;
+    &__header {
+        display: flex;
     }
 
-    &:target &__content {
-        opacity: 1;
-        transform: translate(-50%, -50%) scale(1);
+    &__close {
+        color: #333;
+        position: absolute;
+        top: 0.8rem;
+        right: 2rem;
+        font-size: 3rem;
+        text-decoration: none;
+        display: inline-block;
+        line-height: 1;
+        cursor: pointer;
     }
 
     &__content {
@@ -25,14 +43,13 @@
         position: absolute;
         top: 25%;
         left: 50%;
-        transform: translate(-50%, -50%) scale(.5);
+        transform: translate(-50%, -50%) scale(1);
         background-color: $color-white;
         border-radius: 3px;
         box-shadow: 0 2rem 4rem rgba($color-black, .2);
         display: table;
         overflow: hidden;
-        opacity: 0;
-        transition: all .4s;
+        animation: popup .4s;
     }
 
     &__title {
