--- a/src/components/Dashboard/index.css
+++ b/src/components/Dashboard/index.css
@@ -73,7 +73,7 @@
     margin-top: 1rem; 
 }
 .table__header-category {
-    flex: 0 0 55% !important;
+    flex: 0 0 55%;
     text-align: left;
     margin-left: 0.8rem; 
 }
