--- a/src/components/Transaction/index.css
+++ b/src/components/Transaction/index.css
@@ -104,7 +104,7 @@
     margin-left: 2.5rem; 
 }
 
-.table__header-category {
+.table__header-category--transaction {
     flex: 0 0 15%;
     text-align: left;
     margin-left: 0.8rem;
